Added sound feedback when creating farmland and tending crops.

--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,8 @@ harvest_time:
     crop_growth_check_material: WATCH
     crop_yield_check_material: COMPASS
 
+    sound_enabled: true
+
   # == bonemeal ============================================
   bonemeal_disabled:
     materials:
